--- a/spacepolicy.css
+++ b/spacepolicy.css
@@ -1,6 +1,12 @@
 .inputform {
   text-align: center;
-  background: #E0E0E0;
+  background: rgba(224, 224, 224, 0.5);
   margin: 10px 10px 10px 10px;
-  padding: 15px 0px 0px 15px;
+  padding: 0px 0px 15px 0px;
+  border-radius: 10px;
+}
+
+
+body {
+  background-color: black;
 }
