--- a/spacepolicy.css
+++ b/spacepolicy.css
@@ -6,7 +6,18 @@
   border-radius: 10px;
 }
 
+.header {
+  font-family: Avenir;
+  text-align: center;
+}
+
+#subheader {
+  margin-top: -10px;
+  font-size: 20px;
+}
+
 
 body {
-  background-color: black;
+  background-color: gray;
+
 }
