--- a/spacepolicy.css
+++ b/spacepolicy.css
@@ -1,6 +1,7 @@
 body {
-  background-color: white;
+  background-color: black;
   font-family: Avenir;
+  color: black;
 
 }
 
@@ -14,7 +15,7 @@ body {
   font-family: Avenir;
   text-align: center;
   position: absolute;
-  top: 7%;
+  top: 12%;
   left: 10%;
   right: 10%;
   color: white;
@@ -25,26 +26,51 @@ body {
   font-size: 20px;
 }
 
-.fifties {
-  margin-top: 0px;
-  line-height: 20px;
-}
-
-#fiftyheader {
-  margin-top: 20px;
-  font-weight: bold;
+.timeline {
+  font-family: Avenir;
   text-align: center;
 }
+.decades {
+  margin-top: 5px;
+  line-height: 20px;
+  /*background-color: rgba(224, 224, 224, 0.2);*/
+  padding: 5px 15px 10px 15px;
+  color: white;
+  font-family: Avenir;
 
-.test1 {
-  margin-top: -10px;
 }
 
+.event50acontainer {
+  margin-bottom: -10px;
+}
+
+.event50a {
+  margin-left: 0px;
+}
+
+
+#timeheader {
+  margin-top: 7px;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  font-family: Avenir;
+  font-size: 48px;
+}
 
 .inputform {
   text-align: center;
   background: rgba(224, 224, 224, 0.5);
-  margin: 10px 10px 10px 10px;
-  padding: 0px 0px 15px 0px;
+  margin-top: 25px;
+  padding: 15px 0px 15px 0px;
+  width: 50%;
   border-radius: 10px;
+  font-family: Avenir;
+  position: absolute;
+  left: 25%;
+}
+
+.footimg {
+  height: 200px;
+  width: 150%;
 }
