--- a/spacepolicy.css
+++ b/spacepolicy.css
@@ -1,8 +1,7 @@
 body {
   background-color: black;
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
   color: black;
-
 }
 
 .bgheader {
@@ -15,7 +14,7 @@ body {
 }
 
 .header {
-  font-family: Avenir;
+  font-family: 'Muli' ,Avenir;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -31,7 +30,7 @@ body {
 }
 
 .timeline {
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
   text-align: center;
 }
 
@@ -41,13 +40,13 @@ body {
   /*background-color: rgba(224, 224, 224, 0.2);*/
   padding: 5px 15px 10px 15px;
   color: white;
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
 }
 
 .year {
   position: absolute;
   color: white;
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
   border: white solid 5px;
   text-align: center;
   left: 40%;
@@ -100,7 +99,7 @@ body {
   font-weight: bold;
   text-align: center;
   color: white;
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
   font-size: 48px;
 }
 
@@ -111,7 +110,7 @@ body {
   padding: 15px 0px 15px 0px;
   width: 50%;
   border-radius: 10px;
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
   position: absolute;
   left: 25%;
   z-index: 1;
@@ -126,7 +125,7 @@ body {
 }
 
 .footer {
-  font-family: Avenir;
+  font-family: Avenir, 'Muli';
   font-size: 10px;
   position: absolute;
   bottom: -210px;
