--- a/spacepolicy.css
+++ b/spacepolicy.css
@@ -48,6 +48,7 @@ ul {
   /*background-color: rgba(224, 224, 224, 0.2);*/
   padding: 5px 15px 10px 15px;
   color: white;
+  text-shadow: 2px 2px #000000;
   font-family: Avenir, 'Muli';
 }
 
